--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.button :submit, "Sign up", class:"btn btn-primary btn-block" %>
+        <%= f.button :submit, "Sign up", class:"btn btn-primary-two btn-block" %>
       </div>
     <% end %>
 
