--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.button :submit, "Send me reset password instructions", class:"btn btn-warning btn-block" %>
+        <%= f.button :submit, "Send me reset password instructions", class:"btn btn-warning-two btn-block" %>
       </div>
     <% end %>
 
