--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,6 +6,11 @@
     <%= f.input :description, label: "Description", class:"form-control" %>
 </div>
 <div class="form-group">
-    <%= f.submit class:"btn btn-success" %>
+    <%= f.submit class:"btn btn-success-two" %>
+    <% if current_page?(new_item_path) %>
+      <%= link_to "Home", root_path, class:"btn btn-danger-two" %>
+    <% else %>
+    <%= link_to "Back", item_path(@item), class:"btn btn-danger-two" %>
+    <% end %>
 </div>
 <% end %>
