--- a/app/views/items/_welcome.html.erb
+++ b/app/views/items/_welcome.html.erb
@@ -2,5 +2,5 @@
   <h1>Hiptime</h1>
   <h3>Trusted by million. Hiptime is the best online task management!</h3>
   <br>
-  <%= link_to "Sign Up Now", new_user_registration_path, class:"btn btn-primary btn-lg" %>
+  <%= link_to "Sign Up Now", new_user_registration_path, class:"btn btn-danger btn-lg" %>
 </div>
