--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid d-flex justify-content-between">
           <div class="navbar-header">
             <%= link_to "Hiptime", root_path, class:"navbar-brand" %>
@@ -24,10 +25,10 @@
               </li>
             <% else %>
               <li class="nav-item mr-2">
-                <%= link_to "Sign in", new_user_session_path, class:"btn btn-success"%>
+                <%= link_to "Sign in", new_user_session_path, class:"btn btn-success-two"%>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class:"btn btn-primary"%>
+                <%= link_to "Sign up", new_user_registration_path, class:"btn btn-primary-two"%>
               </li>
             <% end %>
           </ul>
