--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,15 +1,46 @@
 <% if user_signed_in? %>
-  <div class="col w-100 mt-5 p-3">
+<div class="col w-100 mt-5 p-3">
     <div class="w-100 text-center">
       <h1>All Items</h1>
     </div>
     <hr>
     <% @items.each do |item| %>
-    <div class="col w-100 bg-light p-3 mt-2">
-      <h1><%= item.title %></h1>
-      <p><%= item.description %></p>
-      <%= link_to "Show", item_path(item), class:"btn btn-danger-two" %>
-    </div>
+    <% if item.completed? %>
+      <div class="row w-100 bg-light p-3 mt-2">
+        <div class="col-md-2">
+          <p> <%= link_to complete_item_path(item), method: :patch do %> </p>
+           <i class="fa fa-check fa-lg"></i>
+           <% end %>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to item, method: :delete, data: { confirm: "Are you sure?" } do %></p>
+          <i class="fa fa-trash fa-lg"></i>
+          <% end %>
+        </div>
+        <div class="col-md-8">
+          <h1 class="opc-0-5"><%= item.title %></h1>
+          <p class="opc-0-5"><%= item.description %></p>
+        </div>
+      </div>
+    <% else %>
+      <div class="row w-100 bg-light p-3 mt-2">
+        <div class="col-md-2">
+          <p><%= link_to complete_item_path(item), method: :patch do %></p>
+          <i class="fa fa-check fa-lg"></i>
+          <% end %>
+        </div>
+        <div class="col-md-8">
+          <h1><%= item.title %></h1>
+          <p><%= item.description %></p>
+          <%= link_to "Show", item_path(item), class:"btn btn-danger-two" %>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to item, method: :delete, data: { confirm: "Are you sure" } do %></p>
+          <i class="fa fa-trash fa-lg"></i>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
     <% end %>
     <%= link_to "New Items", new_item_path, class:"btn btn-primary-two mt-3" %>
   </div>
